--- a/sistema de lecheria/sistema de lecheria.vbproj
+++ b/sistema de lecheria/sistema de lecheria.vbproj
@@ -92,6 +92,8 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\estilos.css" />
+    <Content Include="imagenes\img01.png" />
     <Content Include="imagenes\logos\Logo-Lacteos-Quesos-Don-Joaquin.png" />
     <Content Include="paginas\Principal.html" />
     <Content Include="Web.config" />
@@ -143,9 +145,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="css\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
