Agrege razas y un cuadro de texto: Andrew
Agregue un bloque-2 y 3, 2 para un cuadro de texto de introducción a la sección de razas y su importancia en la calidad de la leche y bloque-3 para tres cuadros donde se indican las razas principales de las granjas de Don Joaquín mas un cuadro trasero de un color que contraste.

--- a/sistema de lecheria/sistema de lecheria.vbproj
+++ b/sistema de lecheria/sistema de lecheria.vbproj
@@ -92,7 +92,15 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\estilos.css" />
+    <Content Include="imagenes\imagenes-razas\Vaca-holstein.png" />
+    <Content Include="imagenes\imagenes-razas\Vaca-jersey.png" />
+    <Content Include="imagenes\imagenes-razas\Vaca-sindhi.png" />
+    <Content Include="imagenes\img01.png" />
     <Content Include="imagenes\logos\Logo-Lacteos-Quesos-Don-Joaquin.png" />
+    <Content Include="imagenes\Vaca-holstein.png" />
+    <Content Include="imagenes\Vaca-jersey.png" />
+    <Content Include="imagenes\Vaca-sindhi.png" />
     <Content Include="paginas\Principal.html" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -143,9 +151,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="css\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
