pagina de ganado creada, y seccion de ganado anadida a la barra de menu

--- a/sistema de lecheria/sistema de lecheria.vbproj
+++ b/sistema de lecheria/sistema de lecheria.vbproj
@@ -104,6 +104,7 @@
     <Content Include="imagenes\Vaca-holstein.png" />
     <Content Include="imagenes\Vaca-jersey.png" />
     <Content Include="imagenes\Vaca-sindhi.png" />
+    <Content Include="paginas\ganado.html" />
     <Content Include="paginas\Principal.html" />
     <Content Include="Web.config" />
   </ItemGroup>
