--- a/sistema de lecheria/sistema de lecheria.vbproj
+++ b/sistema de lecheria/sistema de lecheria.vbproj
@@ -105,7 +105,7 @@
     <Content Include="imagenes\Vaca-jersey.png" />
     <Content Include="imagenes\Vaca-sindhi.png" />
     <Content Include="paginas\ganado.html" />
-    <Content Include="paginas\Principal.html" />
+    <Content Include="paginas\principal.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
